Added auto task for converting to arm

--- a/test/prog3/Makefile
+++ b/test/prog3/Makefile
@@ -2,4 +2,9 @@ all: prog3
 	gcc prog3.c -o prog3
 
 expand:
-	cpp -P prog3.s > prog3_expanded.s
+	touch temp.s
+	cat prologue >> temp.s
+	sed '/#/d' prog3.s  >> temp.s
+	cat epilogue >> temp.s
+	cpp -P temp.s > prog3_arm.s
+	rm temp.s
