Basic debugger infra setup

--- a/src/simulator/makefile
+++ b/src/simulator/makefile
@@ -1,2 +1,7 @@
-all: simulate
+all: simulator debugger
+
+simulator: simulate
 	g++ simulate.cpp -o simulate
+
+debugger: debug
+	g++ debug.cpp -o debug
