Add assembler debugging label generation

--- a/src/simulator/makefile
+++ b/src/simulator/makefile
@@ -1,7 +1,9 @@
-all: simulator debugger
+LIBRARY_FILES = cpu.cpp loader.cpp
 
-simulator: simulate
+all: simulate debug
+
+simulate: simulate.cpp $(LIBRARY_FILES)
 	g++ simulate.cpp -o simulate
 
-debugger: debug
+debug: debug.cpp $(LIBRARY_FILES)
 	g++ debug.cpp -o debug
