Added automatic test for prog3

--- a/src/simulator/makefile
+++ b/src/simulator/makefile
@@ -7,3 +7,8 @@ simulate: simulate.cpp $(LIBRARY_FILES)
 
 debug: debug.cpp $(LIBRARY_FILES)
 	g++ debug.cpp -o debug
+
+prog3:
+	./simulate test/prog3.txt memory/prog3_test1.mem
+	./simulate test/prog3.txt memory/prog3_test2.mem
+	./simulate test/prog3.txt memory/prog3_test3.mem
