--- a/src/simulator/makefile
+++ b/src/simulator/makefile
@@ -12,3 +12,6 @@ prog3:
 	./simulate test/prog3.txt memory/prog3_test1.mem
 	./simulate test/prog3.txt memory/prog3_test2.mem
 	./simulate test/prog3.txt memory/prog3_test3.mem
+
+clean_prog3:
+	rm -f test/prog3.txt memory/prog3_test1.mem memory/prog3_test2.mem memory/prog3_test3.mem
