Added result verifier for prog3 test

--- a/src/simulator/makefile
+++ b/src/simulator/makefile
@@ -9,9 +9,10 @@ debug: debug.cpp $(LIBRARY_FILES)
 	g++ debug.cpp -o debug
 
 prog3:
-	./simulate test/prog3.txt memory/prog3_test1.mem
-	./simulate test/prog3.txt memory/prog3_test2.mem
-	./simulate test/prog3.txt memory/prog3_test3.mem
+	./simulate test/prog3.txt memory/prog3_test1.mem > result/prog3_result1.mem
+	./simulate test/prog3.txt memory/prog3_test2.mem > result/prog3_result2.mem
+	./simulate test/prog3.txt memory/prog3_test3.mem > result/prog3_result3.mem
+	python3 verify_prog3.py
 
 clean_prog3:
-	rm -f test/prog3.txt memory/prog3_test1.mem memory/prog3_test2.mem memory/prog3_test3.mem
+	rm -f  test/prog3.txt  memory/prog3*  result/*
